--- a/gemini/prompts/intro_prompt_design.ipynb
+++ b/gemini/prompts/intro_prompt_design.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Makur123/generative-ai/blob/main/gemini/prompts/intro_prompt_design.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -90,9 +100,10 @@
         "id": "84f0f73a0f76"
       },
       "source": [
-        "| | |\n",
-        "|-|-|\n",
-        "|Author(s) | [Polong Lin](https://github.com/polong-lin), [Karl Weinmeister](https://github.com/kweinmeister) |"
+        "| Authors |\n",
+        "| --- |\n",
+        "| [Polong Lin](https://github.com/polong-lin) |\n",
+        "| [Karl Weinmeister](https://github.com/kweinmeister) |"
       ]
     },
     {
@@ -138,49 +149,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "tFy3H3aPgx12"
       },
       "outputs": [],
       "source": [
-        "%pip install --upgrade --quiet google-genai"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "R5Xep4W9lq-Z"
-      },
-      "source": [
-        "### Restart runtime\n",
-        "\n",
-        "To use the newly installed packages in this Jupyter runtime, you must restart the runtime. You can do this by running the cell below, which will restart the current kernel."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "XRvKdaPDTznN"
-      },
-      "outputs": [],
-      "source": [
-        "import IPython\n",
-        "\n",
-        "app = IPython.Application.instance()\n",
-        "app.kernel.do_shutdown(True)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SbmM4z7FOBpM"
-      },
-      "source": [
-        "<div class=\"alert alert-block alert-warning\">\n",
-        "<b>⚠️ The kernel is going to restart. Please wait until it is finished before continuing to the next step. ⚠️</b>\n",
-        "</div>\n"
+        "pip install --upgrade --quiet google-genai"
       ]
     },
     {
@@ -878,7 +853,9 @@
   "metadata": {
     "colab": {
       "name": "intro_prompt_design.ipynb",
-      "toc_visible": true
+      "toc_visible": true,
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
